pascal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMEN
    PUN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funcionlista
Rule 2     funcionlista -> funcion
Rule 3     funcionlista -> funcionlista funcion
Rule 4     funcion -> fundecl ID PARI argumento PARD locales BEGIN lineas END
Rule 5     fundecl -> FUN
Rule 6     argumento -> vacio
Rule 7     argumento -> declaracion
Rule 8     declaracion -> dec
Rule 9     declaracion -> declaracion COMA dec
Rule 10    locales -> loclist PCOMA
Rule 11    locales -> vacio
Rule 12    loclist -> loc
Rule 13    loclist -> loclist PCOMA loc
Rule 14    loc -> dec
Rule 15    loc -> funcion
Rule 16    dec -> ID DPUN type
Rule 17    lineas -> linea
Rule 18    lineas -> lineas PCOMA linea
Rule 19    linea -> expre
Rule 20    linea -> WRITE PARI expre PARD
Rule 21    linea -> READ PARI location PARD
Rule 22    linea -> PRINT PARI STRING PARD
Rule 23    linea -> ID ASIG expre
Rule 24    linea -> RETURN expre
Rule 25    linea -> SKIP
Rule 26    linea -> BREAK
Rule 27    linea -> WHILE relacion DO linea
Rule 28    linea -> IF relacion THEN linea else_r
Rule 29    linea -> BEGIN lineas END
Rule 30    else_r -> ELSE linea
Rule 31    else_r -> vacio
Rule 32    location -> ID
Rule 33    location -> ID CORI expre CORD
Rule 34    relacion -> expre LT expre
Rule 35    relacion -> expre LE expre
Rule 36    relacion -> expre GT expre
Rule 37    relacion -> expre GE expre
Rule 38    relacion -> expre EQ expre
Rule 39    relacion -> expre NE expre
Rule 40    relacion -> relacion AND relacion
Rule 41    relacion -> relacion OR relacion
Rule 42    relacion -> NOT relacion
Rule 43    relacion -> PARI relacion PARD
Rule 44    type -> FLOAT
Rule 45    type -> INT
Rule 46    type -> FLOAT CORI expre CORD
Rule 47    type -> INT CORI expre CORD
Rule 48    exprelist -> exprelist COMA expre
Rule 49    exprelist -> expre
Rule 50    expre -> expre MAS expre
Rule 51    expre -> expre MENOS expre
Rule 52    expre -> expre MUL expre
Rule 53    expre -> expre DIV expre
Rule 54    expre -> MENOS expre
Rule 55    expre -> MAS expre
Rule 56    expre -> ID PARI exprelist PARD
Rule 57    expre -> ID
Rule 58    expre -> ID CORI expre CORD
Rule 59    expre -> FNUM
Rule 60    expre -> INUM
Rule 61    expre -> INT PARI expre PARD
Rule 62    expre -> FLOAT PARI expre PARD
Rule 63    vacio -> <empty>

Terminals, with rules where they appear

AND                  : 40
ASIG                 : 23
BEGIN                : 4 29
BREAK                : 26
COMA                 : 9 48
COMEN                : 
CORD                 : 33 46 47 58
CORI                 : 33 46 47 58
DIV                  : 53
DO                   : 27
DPUN                 : 16
ELSE                 : 30
END                  : 4 29
EQ                   : 38
FLOAT                : 44 46 62
FNUM                 : 59
FUN                  : 5
GE                   : 37
GT                   : 36
ID                   : 4 16 23 32 33 56 57 58
IF                   : 28
INT                  : 45 47 61
INUM                 : 60
LE                   : 35
LT                   : 34
MAS                  : 50 55
MENOS                : 51 54
MUL                  : 52
NE                   : 39
NOT                  : 42
OR                   : 41
PARD                 : 4 20 21 22 43 56 61 62
PARI                 : 4 20 21 22 43 56 61 62
PCOMA                : 10 13 18
PRINT                : 22
PUN                  : 
READ                 : 21
RETURN               : 24
SKIP                 : 25
STRING               : 22
THEN                 : 28
WHILE                : 27
WRITE                : 20
error                : 

Nonterminals, with rules where they appear

argumento            : 4
dec                  : 8 9 14
declaracion          : 7 9
else_r               : 28
expre                : 19 20 23 24 33 34 34 35 35 36 36 37 37 38 38 39 39 46 47 48 49 50 50 51 51 52 52 53 53 54 55 58 61 62
exprelist            : 48 56
funcion              : 2 3 15
funcionlista         : 1 3
fundecl              : 4
linea                : 17 18 27 28 30
lineas               : 4 18 29
loc                  : 12 13
locales              : 4
location             : 21
loclist              : 10 13
programa             : 0
relacion             : 27 28 40 40 41 41 42 43
type                 : 16
vacio                : 6 11 31

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funcionlista
    (2) funcionlista -> . funcion
    (3) funcionlista -> . funcionlista funcion
    (4) funcion -> . fundecl ID PARI argumento PARD locales BEGIN lineas END
    (5) fundecl -> . FUN

    FUN             shift and go to state 5

    programa                       shift and go to state 1
    funcionlista                   shift and go to state 2
    funcion                        shift and go to state 3
    fundecl                        shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funcionlista .
    (3) funcionlista -> funcionlista . funcion
    (4) funcion -> . fundecl ID PARI argumento PARD locales BEGIN lineas END
    (5) fundecl -> . FUN

    $end            reduce using rule 1 (programa -> funcionlista .)
    FUN             shift and go to state 5

    funcion                        shift and go to state 6
    fundecl                        shift and go to state 4

state 3

    (2) funcionlista -> funcion .

    FUN             reduce using rule 2 (funcionlista -> funcion .)
    $end            reduce using rule 2 (funcionlista -> funcion .)


state 4

    (4) funcion -> fundecl . ID PARI argumento PARD locales BEGIN lineas END

    ID              shift and go to state 7


state 5

    (5) fundecl -> FUN .

    ID              reduce using rule 5 (fundecl -> FUN .)


state 6

    (3) funcionlista -> funcionlista funcion .

    FUN             reduce using rule 3 (funcionlista -> funcionlista funcion .)
    $end            reduce using rule 3 (funcionlista -> funcionlista funcion .)


state 7

    (4) funcion -> fundecl ID . PARI argumento PARD locales BEGIN lineas END

    PARI            shift and go to state 8


state 8

    (4) funcion -> fundecl ID PARI . argumento PARD locales BEGIN lineas END
    (6) argumento -> . vacio
    (7) argumento -> . declaracion
    (63) vacio -> .
    (8) declaracion -> . dec
    (9) declaracion -> . declaracion COMA dec
    (16) dec -> . ID DPUN type

    PARD            reduce using rule 63 (vacio -> .)
    ID              shift and go to state 9

    argumento                      shift and go to state 10
    vacio                          shift and go to state 11
    declaracion                    shift and go to state 12
    dec                            shift and go to state 13

state 9

    (16) dec -> ID . DPUN type

    DPUN            shift and go to state 14


state 10

    (4) funcion -> fundecl ID PARI argumento . PARD locales BEGIN lineas END

    PARD            shift and go to state 15


state 11

    (6) argumento -> vacio .

    PARD            reduce using rule 6 (argumento -> vacio .)


state 12

    (7) argumento -> declaracion .
    (9) declaracion -> declaracion . COMA dec

    PARD            reduce using rule 7 (argumento -> declaracion .)
    COMA            shift and go to state 16


state 13

    (8) declaracion -> dec .

    COMA            reduce using rule 8 (declaracion -> dec .)
    PARD            reduce using rule 8 (declaracion -> dec .)


state 14

    (16) dec -> ID DPUN . type
    (44) type -> . FLOAT
    (45) type -> . INT
    (46) type -> . FLOAT CORI expre CORD
    (47) type -> . INT CORI expre CORD

    FLOAT           shift and go to state 18
    INT             shift and go to state 19

    type                           shift and go to state 17

state 15

    (4) funcion -> fundecl ID PARI argumento PARD . locales BEGIN lineas END
    (10) locales -> . loclist PCOMA
    (11) locales -> . vacio
    (12) loclist -> . loc
    (13) loclist -> . loclist PCOMA loc
    (63) vacio -> .
    (14) loc -> . dec
    (15) loc -> . funcion
    (16) dec -> . ID DPUN type
    (4) funcion -> . fundecl ID PARI argumento PARD locales BEGIN lineas END
    (5) fundecl -> . FUN

    BEGIN           reduce using rule 63 (vacio -> .)
    ID              shift and go to state 9
    FUN             shift and go to state 5

    fundecl                        shift and go to state 4
    locales                        shift and go to state 20
    loclist                        shift and go to state 21
    vacio                          shift and go to state 22
    loc                            shift and go to state 23
    dec                            shift and go to state 24
    funcion                        shift and go to state 25

state 16

    (9) declaracion -> declaracion COMA . dec
    (16) dec -> . ID DPUN type

    ID              shift and go to state 9

    dec                            shift and go to state 26

state 17

    (16) dec -> ID DPUN type .

    COMA            reduce using rule 16 (dec -> ID DPUN type .)
    PARD            reduce using rule 16 (dec -> ID DPUN type .)
    PCOMA           reduce using rule 16 (dec -> ID DPUN type .)


state 18

    (44) type -> FLOAT .
    (46) type -> FLOAT . CORI expre CORD

    COMA            reduce using rule 44 (type -> FLOAT .)
    PARD            reduce using rule 44 (type -> FLOAT .)
    PCOMA           reduce using rule 44 (type -> FLOAT .)
    CORI            shift and go to state 27


state 19

    (45) type -> INT .
    (47) type -> INT . CORI expre CORD

    COMA            reduce using rule 45 (type -> INT .)
    PARD            reduce using rule 45 (type -> INT .)
    PCOMA           reduce using rule 45 (type -> INT .)
    CORI            shift and go to state 28


state 20

    (4) funcion -> fundecl ID PARI argumento PARD locales . BEGIN lineas END

    BEGIN           shift and go to state 29


state 21

    (10) locales -> loclist . PCOMA
    (13) loclist -> loclist . PCOMA loc

    PCOMA           shift and go to state 30


state 22

    (11) locales -> vacio .

    BEGIN           reduce using rule 11 (locales -> vacio .)


state 23

    (12) loclist -> loc .

    PCOMA           reduce using rule 12 (loclist -> loc .)


state 24

    (14) loc -> dec .

    PCOMA           reduce using rule 14 (loc -> dec .)


state 25

    (15) loc -> funcion .

    PCOMA           reduce using rule 15 (loc -> funcion .)


state 26

    (9) declaracion -> declaracion COMA dec .

    COMA            reduce using rule 9 (declaracion -> declaracion COMA dec .)
    PARD            reduce using rule 9 (declaracion -> declaracion COMA dec .)


state 27

    (46) type -> FLOAT CORI . expre CORD
    (50) expre -> . expre MAS expre
    (51) expre -> . expre MENOS expre
    (52) expre -> . expre MUL expre
    (53) expre -> . expre DIV expre
    (54) expre -> . MENOS expre
    (55) expre -> . MAS expre
    (56) expre -> . ID PARI exprelist PARD
    (57) expre -> . ID
    (58) expre -> . ID CORI expre CORD
    (59) expre -> . FNUM
    (60) expre -> . INUM
    (61) expre -> . INT PARI expre PARD
    (62) expre -> . FLOAT PARI expre PARD

    MENOS           shift and go to state 34
    MAS             shift and go to state 33
    ID              shift and go to state 35
    FNUM            shift and go to state 36
    INUM            shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 31

    expre                          shift and go to state 32

state 28

    (47) type -> INT CORI . expre CORD
    (50) expre -> . expre MAS expre
    (51) expre -> . expre MENOS expre
    (52) expre -> . expre MUL expre
    (53) expre -> . expre DIV expre
    (54) expre -> . MENOS expre
    (55) expre -> . MAS expre
    (56) expre -> . ID PARI exprelist PARD
    (57) expre -> . ID
    (58) expre -> . ID CORI expre CORD
    (59) expre -> . FNUM
    (60) expre -> . INUM
    (61) expre -> . INT PARI expre PARD
    (62) expre -> . FLOAT PARI expre PARD

    MENOS           shift and go to state 34
    MAS             shift and go to state 33
    ID              shift and go to state 35
    FNUM            shift and go to state 36
    INUM            shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 31

    expre                          shift and go to state 39

state 29

    (4) funcion -> fundecl ID PARI argumento PARD locales BEGIN . lineas END
    (17) lineas -> . linea
    (18) lineas -> . lineas PCOMA linea
    (19) linea -> . expre
    (20) linea -> . WRITE PARI expre PARD
    (21) linea -> . READ PARI location PARD
    (22) linea -> . PRINT PARI STRING PARD
    (23) linea -> . ID ASIG expre
    (24) linea -> . RETURN expre
    (25) linea -> . SKIP
    (26) linea -> . BREAK
    (27) linea -> . WHILE relacion DO linea
    (28) linea -> . IF relacion THEN linea else_r
    (29) linea -> . BEGIN lineas END
    (50) expre -> . expre MAS expre
    (51) expre -> . expre MENOS expre
    (52) expre -> . expre MUL expre
    (53) expre -> . expre DIV expre
    (54) expre -> . MENOS expre
    (55) expre -> . MAS expre
    (56) expre -> . ID PARI exprelist PARD
    (57) expre -> . ID
    (58) expre -> . ID CORI expre CORD
    (59) expre -> . FNUM
    (60) expre -> . INUM
    (61) expre -> . INT PARI expre PARD
    (62) expre -> . FLOAT PARI expre PARD

    WRITE           shift and go to state 45
    READ            shift and go to state 46
    PRINT           shift and go to state 47
    ID              shift and go to state 40
    RETURN          shift and go to state 48
    SKIP            shift and go to state 49
    BREAK           shift and go to state 50
    WHILE           shift and go to state 51
    IF              shift and go to state 52
    BEGIN           shift and go to state 41
    MENOS           shift and go to state 34
    MAS             shift and go to state 33
    FNUM            shift and go to state 36
    INUM            shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 31

    lineas                         shift and go to state 42
    linea                          shift and go to state 43
    expre                          shift and go to state 44

state 30

    (10) locales -> loclist PCOMA .
    (13) loclist -> loclist PCOMA . loc
    (14) loc -> . dec
    (15) loc -> . funcion
    (16) dec -> . ID DPUN type
    (4) funcion -> . fundecl ID PARI argumento PARD locales BEGIN lineas END
    (5) fundecl -> . FUN

    BEGIN           reduce using rule 10 (locales -> loclist PCOMA .)
    ID              shift and go to state 9
    FUN             shift and go to state 5

    loc                            shift and go to state 53
    dec                            shift and go to state 24
    funcion                        shift and go to state 25
    fundecl                        shift and go to state 4

state 31

    (62) expre -> FLOAT . PARI expre PARD

    PARI            shift and go to state 54


state 32

    (46) type -> FLOAT CORI expre . CORD
    (50) expre -> expre . MAS expre
    (51) expre -> expre . MENOS expre
    (52) expre -> expre . MUL expre
    (53) expre -> expre . DIV expre

    CORD            shift and go to state 55
    MAS             shift and go to state 56
    MENOS           shift and go to state 57
    MUL             shift and go to state 58
    DIV             shift and go to state 59


state 33

    (55) expre -> MAS . expre
    (50) expre -> . expre MAS expre
    (51) expre -> . expre MENOS expre
    (52) expre -> . expre MUL expre
    (53) expre -> . expre DIV expre
    (54) expre -> . MENOS expre
    (55) expre -> . MAS expre
    (56) expre -> . ID PARI exprelist PARD
    (57) expre -> . ID
    (58) expre -> . ID CORI expre CORD
    (59) expre -> . FNUM
    (60) expre -> . INUM
    (61) expre -> . INT PARI expre PARD
    (62) expre -> . FLOAT PARI expre PARD

    MENOS           shift and go to state 34
    MAS             shift and go to state 33
    ID              shift and go to state 35
    FNUM            shift and go to state 36
    INUM            shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 31

    expre                          shift and go to state 60

state 34

    (54) expre -> MENOS . expre
    (50) expre -> . expre MAS expre
    (51) expre -> . expre MENOS expre
    (52) expre -> . expre MUL expre
    (53) expre -> . expre DIV expre
    (54) expre -> . MENOS expre
    (55) expre -> . MAS expre
    (56) expre -> . ID PARI exprelist PARD
    (57) expre -> . ID
    (58) expre -> . ID CORI expre CORD
    (59) expre -> . FNUM
    (60) expre -> . INUM
    (61) expre -> . INT PARI expre PARD
    (62) expre -> . FLOAT PARI expre PARD

    MENOS           shift and go to state 34
    MAS             shift and go to state 33
    ID              shift and go to state 35
    FNUM            shift and go to state 36
    INUM            shift and go to state 37
    INT             shift and go to state 38
    FLOAT           shift and go to state 31

    expre                          shift and go to state 61

state 35

    (56) expre -> ID . PARI exprelist PARD
    (57) expre -> ID .
    (58) expre -> ID . CORI expre CORD

    PARI            shift and go to state 62
    CORD            reduce using rule 57 (expre -> ID .)
    MAS             reduce using rule 57 (expre -> ID .)
    MENOS           reduce using rule 57 (expre -> ID .)
    MUL             reduce using rule 57 (expre -> ID .)
    DIV             reduce using rule 57 (expre -> ID .)
    END             reduce using rule 57 (expre -> ID .)
    PCOMA           reduce using rule 57 (expre -> ID .)
    ELSE            reduce using rule 57 (expre -> ID .)
    LT              reduce using rule 57 (expre -> ID .)
    LE              reduce using rule 57 (expre -> ID .)
    GT              reduce using rule 57 (expre -> ID .)
    GE              reduce using rule 57 (expre -> ID .)
    EQ              reduce using rule 57 (expre -> ID .)
    NE              reduce using rule 57 (expre -> ID .)
    PARD            reduce using rule 57 (expre -> ID .)
    COMA            reduce using rule 57 (expre -> ID .)
    DO              reduce using rule 57 (expre -> ID .)
    AND             reduce using rule 57 (expre -> ID .)
    OR              reduce using rule 57 (expre -> ID .)
    THEN            reduce using rule 57 (expre -> ID .)
    CORI            shift and go to state 63


state 36

    (59) expre -> FNUM .

    CORD            reduce using rule 59 (expre -> FNUM .)
    MAS             reduce using rule 59 (expre -> FNUM .)
    MENOS           reduce using rule 59 (expre -> FNUM .)
    MUL             reduce using rule 59 (expre -> FNUM .)
    DIV             reduce using rule 59 (expre -> FNUM .)
    END             reduce using rule 59 (expre -> FNUM .)
    PCOMA           reduce using rule 59 (expre -> FNUM .)
    ELSE            reduce using rule 59 (expre -> FNUM .)
    LT              reduce using rule 59 (expre -> FNUM .)
    LE              reduce using rule 59 (expre -> FNUM .)
    GT              reduce using rule 59 (expre -> FNUM .)
    GE              reduce using rule 59 (expre -> FNUM .)
    EQ              reduce using rule 59 (expre -> FNUM .)
    NE              reduce using rule 59 (expre -> FNUM .)
    PARD            reduce using rule 59 (expre -> FNUM .)
    COMA            reduce using rule 59 (expre -> FNUM .)
    DO              reduce using rule 59 (expre -> FNUM .)
    AND             reduce using rule 59 (expre -> FNUM .)
    OR              reduce using rule 59 (expre -> FNUM .)
    THEN            reduce using rule 59 (expre -> FNUM .)


state 37

    (60) expre -> INUM .
